# ppg

./: .gitignore  CMakeLists.txt  godot-cpp
capnp/: client.capnp  connection.capnp  server.capnp  types.capnp
demo/: icon.svg.import  project.godot
demo/.godot/: extension_list.cfg
demo/.godot/editor/: 0.tscn-editstate-5579de804ceb5d5b633cde05a452fef6.cfg  0.tscn-editstate-e5c01332a53fbe6abfce7f4aa4a4e278.cfg  3d.tscn-editstate-89374d0738d9bc0e74f4532b63cf5ce5.cfg  3d.tscn-folding-89374d0738d9bc0e74f4532b63cf5ce5.cfg  Capsule.tscn-folding-7cacda2ab0927df801221eed43a5d379.cfg  Cone.tscn-editstate-46324d54306d556780c4112d988e2cbf.cfg  Cone.tscn-folding-46324d54306d556780c4112d988e2cbf.cfg  Cube.tscn-editstate-ebe4811a085332d004267262f7af67b3.cfg  Cube.tscn-folding-ebe4811a085332d004267262f7af67b3.cfg  Cylinder.tscn-folding-4adec5219588d333034af379d491cd96.cfg  Env.tscn-folding-7c81beb022ee8dab23c454869e4bc018.cfg  Icosphere.tscn-folding-7d771166fd5ed5582636c76dc0f7ea90.cfg  Plane.tscn-folding-f94d48fbcd13394c5dffaea16b37478f.cfg  create_recent.Node  debug.tscn-editstate-2b5dba469065b54a60646d9bcb1ee3b1.cfg  debug_client.tscn-editstate-798bc43e0c36c0fb20cf9fbb344b0c20.cfg  debug_server.tscn-editstate-a10ae0dabdae7b49bec07815ee88d26a.cfg  editor_layout.cfg  filesystem_cache8  filesystem_update4  main.tscn-editstate-3ad5c15c4f3250da0cc7c1af1770d85f.cfg  map.tscn-editstate-ed473fb65393d895a0df52094abbd023.cfg  mesh_library.tscn-editstate-d37ae208a34eaaa6d6669228ec75f4d8.cfg  mesh_library.tscn-folding-d37ae208a34eaaa6d6669228ec75f4d8.cfg  player.tscn-editstate-234fb6894ec6226e856ab7f825500d3d.cfg  player.tscn-folding-234fb6894ec6226e856ab7f825500d3d.cfg  project_metadata.cfg  recent_dirs  script_editor_cache.cfg  user.tscn-editstate-ed3752df070cb0495544ad6e376f5e0d.cfg  user.tscn-folding-ed3752df070cb0495544ad6e376f5e0d.cfg
demo/.godot/imported/: Cone.glb-9ec037e35f881adb161c92bce190191f.md5  Cone.glb-9ec037e35f881adb161c92bce190191f.scn  Cone.glb-ab557766a5ff64f59cb66445535b9388.md5  Cone.glb-ab557766a5ff64f59cb66445535b9388.scn  Icosphere.glb-400186beecf814012223fb91aa6cc4fa.md5  Icosphere.glb-400186beecf814012223fb91aa6cc4fa.scn  Icosphere.glb-f8a996f178f22208c651409fc80b1410.md5  Icosphere.glb-f8a996f178f22208c651409fc80b1410.scn
demo/GodotQuickPrimitives-7ac2b61cfaf1f80966273e18a7eb165beb4f349d/: icon.png.import  quick-primitives.png.import
demo/models/: mesh_library.tres
demo/scenes/: 0.tscn  3d.tscn  debug.tscn  debug_client.tscn  debug_server.tscn  map.tscn  mesh_library.tscn  player.tscn  user.tscn
demo/scripts/: Test.gd  debug.gd  foo.gd  main.gd  player.gd  player_enet.gd  print.gd  server.gd
include/client/: client.hxx  dyn_data_worker.hxx  dyn_info.hxx  player.hxx  some_data_worker.hxx
include/common/: button_flags.hxx  channels.hxx  constants.hxx  id_pull.hxx  obj.hxx  obj_wrapper.hxx  print_utils.hxx  reg_prop.hxx  user.hxx  vector_serializer.hxx
include/server/: chat_worker.hxx  dyn_info.hxx  dynamic_data_worker.hxx  server.hxx  some_data.hxx  some_data_worker.hxx
plan/: modules.drawio  ppg.drawio
src/: godot_initiator.cxx
src/client/: client.cxx  dyn_data_worker.cxx  dyn_info.cxx  some_data_worker.cxx
src/common/: id_pull.cxx  obj.cxx  user.cxx  vector_serializer.cxx
src/server/: chat_worker.cxx  dyn_info.cxx  dynamic_data_worker.cxx  server.cxx  some_data.cxx  some_data_worker.cxx
(+14 files in other folders)
